fix events section overflow on md screen

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1584,6 +1584,10 @@ body{
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .md\:overflow-visible{
+    overflow: visible;
+  }
+
   .md\:px-\[5\.125rem\]{
     padding-left: 5.125rem;
     padding-right: 5.125rem;
